# generalserver

./: .gitattributes  .gitignore  CLAUDE.md  README  README.md
src/: AUTHORS  Macros.am  Makefile  Makefile.am  Makefile.in  all_AC_DEFUN.m4  autobuild.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  generalserver.cpp  libtool  platform_define.h  stdafx.h  valgrind.suppressions.supp  vg  xslt.xml
src/.deps/: general_server.Po  generalserver.Po
src/LibXml/: LibXSchemaDoc.cpp  LibXSchemaDoc.h  LibXSchemaNode.cpp  LibXSchemaNode.h  LibXmlArea.cpp  LibXmlArea.h  LibXmlBaseDoc.cpp  LibXmlBaseDoc.h  LibXmlBaseNode.cpp  LibXmlBaseNode.h  LibXmlDoc.cpp  LibXmlDoc.h  LibXmlLibrary.cpp  LibXmlLibrary.h  LibXmlNode.cpp  LibXmlNode.h  LibXmlNodeMask.cpp  LibXmlNodeMask.h  LibXslDoc.cpp  LibXslDoc.h  LibXslModule.cpp  LibXslModule.h  LibXslNode.cpp  LibXslNode.h  LibXslTransformContext.cpp  LibXslTransformContext.h  LibXslXPathFunctionContext.cpp  LibXslXPathFunctionContext.h  Makefile  Makefile.am  Makefile.in
src/LibXml/.deps/: LibXSchemaDoc.Po  LibXSchemaNode.Po  LibXmlArea.Po  LibXmlBaseDoc.Po  LibXmlBaseNode.Po  LibXmlDoc.Po  LibXmlLibrary.Po  LibXmlNode.Po  LibXmlNodeMask.Po  LibXslDoc.Po  LibXslModule.Po  LibXslNode.Po  LibXslTransformContext.Po  LibXslXPathFunctionContext.Po
src/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.2  traces.3  traces.4  traces.5
src/installations/libxml2-rr/: .directory  DOCBparser.lo  HTMLparser.c  HTMLparser.lo  HTMLtree.lo  Makefile  Makefile.am  Makefile.in  SAX.lo  SAX2.c  SAX2.lo  c14n.c  c14n.lo  catalog.lo  chvalid.lo  config.h  config.h.in  config.status  configure  configure.ac  debugXML.c  debugXML.lo  dict.c  dict.lo  elfgcchack.h  encoding.c  encoding.lo  entities.c  entities.lo  error.c  error.lo  globals.c  globals.lo  hash.c  hash.lo  legacy.lo  libtool  libxml-2.0.pc  libxml2.la  libxml2.spec  (+83 more)
src/installations/libxml2-rr/.deps/: DOCBparser.Plo  HTMLparser.Plo  HTMLtree.Plo  SAX.Plo  SAX2.Plo  c14n.Plo  catalog.Plo  chvalid.Plo  debugXML.Plo  dict.Plo  encoding.Plo  entities.Plo  error.Plo  globals.Plo  hash.Plo  legacy.Plo  list.Plo  nanoftp.Plo  nanohttp.Plo  parser.Plo  parserInternals.Plo  pattern.Plo  relaxng.Plo  runsuite.Po  runtest.Po  runxmlconf.Po  schematron.Plo  testAutomata.Po  testC14N.Po  testHTML.Po  testModule.Po  testReader.Po  testRegexp.Po  testRelax.Po  testSAX.Po  testSchemas.Po  testThreads.Po  testURI.Po  testXPath.Po  testapi.Po  (+25 more)
src/installations/libxml2-rr/.libs/: libxml2rr.la  libxml2rr.lai  libxml2rr.so.2  libxml2rr.so.2.7.8  runsuite  runtest  runxmlconf  testAutomata  testC14N  testHTML  testModule  testReader  testRegexp  testRelax  testSAX  (+11 more)
src/installations/libxslt-rr/: .directory  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libexslt.pc  libtool  libxslt.pc  libxslt.spec  xslt-config  xslt.tests.xml  xsltConf.sh
src/server/: .directory  Conversation.cpp  Conversation.h  Database.cpp  Database.h  DatabaseClass.cpp  DatabaseClass.h  DatabaseNode.cpp  DatabaseNode.h  DatabaseNodeServerObject.cpp  DatabaseNodeServerObject.h  Debug.cpp  Debug.h  Exceptions.cpp  Exceptions.h  FileSystem.cpp  FileSystem.h  IReportable.h  Iterators.cpp  Iterators.h  Main.cpp  Main.h  Makefile  Makefile.am  Makefile.in  MemoryLifetimeOwner.cpp  MemoryLifetimeOwner.h  MessageInterpretation.cpp  MessageInterpretation.h  ProfilerThread.cpp  ProfilerThread.h  RegularX.cpp  RegularX.h  RelationalDatabases.cpp  RelationalDatabases.h  Repository.cpp  Repository.h  Request.cpp  Request.h  Response.cpp  (+23 more)
src/server/.deps/: Conversation.Po  Database.Po  DatabaseClass.Po  DatabaseNode.Po  DatabaseNodeServerObject.Po  Debug.Po  Exceptions.Po  FileSystem.Po  Iterators.Po  Main.Po  MemoryLifetimeOwner.Po  MessageInterpretation.Po  ProfilerThread.Po  RegularX.Po  RelationalDatabases.Po  Repository.Po  Request.Po  Response.Po  Server.Po  Service.Po  Session.Po  TXml.Po  TXmlProcessor.Po  Tests.Po  Thread.Po  User.Po  XJavaScript.Po  XSLFunctions.Po
src/server/IXml/: IXSchemaDoc.h  IXSchemaNode.h  IXmlArea.h  IXmlBaseDoc.h  IXmlBaseNode.h  IXmlDebugContext.h  IXmlDoc.h  IXmlGrammarContext.h  IXmlLibrary.h  IXmlMaskContext.h  IXmlNamespace.h  IXmlNode.h  IXmlNodeList.h  IXmlNodeMap.h  IXmlNodeMask.h  IXmlProfiler.h  IXmlQueryEnvironment.h  IXmlQueryEnvironmentComponent.h  IXmlSecurityContext.h  IXmlTriggerContext.h  IXmlXPathProcessingContext.h  IXslDoc.h  IXslModule.h  IXslNode.h  IXslTransformContext.h  IXslXPathFunctionContext.h
src/server/QueryEnvironment/: AdminSecurityContext.h  BrowserQueryEnvironment.h  CompilationContext.cpp  CompilationContext.h  CompilationEnvironment.cpp  CompilationEnvironment.h  DatabaseAdminQueryEnvironment.cpp  DatabaseAdminQueryEnvironment.h  DatabaseNodeUserStoreSecurityContext.cpp  DatabaseNodeUserStoreSecurityContext.h  GrammarContext.cpp  GrammarContext.h  Makefile  Makefile.am  Makefile.in  MaskContext.cpp  MaskContext.h  QueryEnvironment.cpp  QueryEnvironment.h  RepositorySaveSecurityContext.cpp  RepositorySaveSecurityContext.h  SecurityContext.cpp  SecurityContext.h  SecurityStrategy.cpp  SecurityStrategy.h  TriggerContext.cpp  TriggerContext.h  XPathProcessingContext.cpp  XPathProcessingContext.h
src/server/Utilities/: Makefile  Makefile.am  Makefile.in  StringMap.cpp  StringMap.h  StringMultiMap.cpp  StringMultiMap.h  StringVector.cpp  StringVector.h  VirtualWrapperClass.h  XPathStringStream.h  clone.c  container.c  gdb.c  regexpr2.cpp  regexpr2.h  reimpl2.h  restack.h  strtools.cpp  strtools.h
src/server/Xml/: Makefile  Makefile.am  Makefile.in  XSchemaDoc.cpp  XSchemaDoc.h  XSchemaNode.cpp  XSchemaNode.h  XmlAdminQueryEnvironment.cpp  XmlAdminQueryEnvironment.h  XmlBaseDoc.cpp  XmlBaseDoc.h  XmlBaseNode.cpp  XmlBaseNode.h  XmlDoc.cpp  XmlDoc.h  XmlLibrary.cpp  XmlLibrary.h  XmlNamespace.cpp  XmlNamespace.h  XmlNode.cpp  XmlNode.h  XmlNodeList.cpp  XmlNodeList.h  XmlNodeMap.cpp  XmlNodeMap.h  XslDoc.cpp  XslDoc.h  XslModule.cpp  XslModule.h  XslNode.cpp  XslNode.h
(+1256 files in other folders)
