## Process this file with automake to produce Makefile.in
ABS_DIR = $(abs_top_srcdir)/LibXml
AM_CPPFLAGS = $(INCLUDE_DIRS_STANDARD)
lib_LIBRARIES = libxml2wrapper.a
AUTOMAKE_OPTIONS = subdir-objects
libxml2wrapper_a_SOURCES = \
$(ABS_DIR)/LibXmlLibrary.cpp \
$(ABS_DIR)/LibXmlBaseDoc.cpp \
$(ABS_DIR)/LibXmlBaseNode.cpp \
$(ABS_DIR)/LibXslModule.cpp \
$(ABS_DIR)/LibXslTransformContext.cpp \
$(ABS_DIR)/LibXslXPathFunctionContext.cpp \
$(ABS_DIR)/LibXmlNode.cpp \
$(ABS_DIR)/LibXmlDoc.cpp \
$(ABS_DIR)/LibXslNode.cpp \
$(ABS_DIR)/LibXslDoc.cpp \
$(ABS_DIR)/LibXSchemaNode.cpp \
$(ABS_DIR)/LibXSchemaDoc.cpp \
$(ABS_DIR)/LibXmlArea.cpp \
$(ABS_DIR)/LibXmlNodeMask.cpp
 
