ABS_DIR = $(abs_top_srcdir)/server/QueryEnvironment
AM_CPPFLAGS = $(INCLUDE_DIRS_STANDARD)
lib_LIBRARIES = libqueryenvironment.a
AUTOMAKE_OPTIONS = subdir-objects
libqueryenvironment_a_SOURCES = \
$(ABS_DIR)/QueryEnvironment.cpp \
$(ABS_DIR)/CompilationEnvironment.cpp \
$(ABS_DIR)/SecurityStrategy.cpp \
$(ABS_DIR)/CompilationContext.cpp \
$(ABS_DIR)/GrammarContext.cpp \
$(ABS_DIR)/XPathProcessingContext.cpp \
$(ABS_DIR)/SecurityContext.cpp \
$(ABS_DIR)/DatabaseAdminQueryEnvironment.cpp \
$(ABS_DIR)/DatabaseNodeUserStoreSecurityContext.cpp \
$(ABS_DIR)/TriggerContext.cpp \
$(ABS_DIR)/MaskContext.cpp \
$(ABS_DIR)/RepositorySaveSecurityContext.cpp
