ABS_DIR = $(abs_top_srcdir)/server/Xml
AM_CPPFLAGS = $(INCLUDE_DIRS_STANDARD)
AUTOMAKE_OPTIONS = subdir-objects
lib_LIBRARIES = libgsxml.a
libgsxml_a_SOURCES = \
$(ABS_DIR)/XmlLibrary.cpp \
$(ABS_DIR)/XmlBaseDoc.cpp \
$(ABS_DIR)/XmlBaseNode.cpp \
$(ABS_DIR)/XmlNodeMap.cpp \
$(ABS_DIR)/XmlNodeList.cpp \
$(ABS_DIR)/XslModule.cpp \
$(ABS_DIR)/XmlNamespace.cpp \
$(ABS_DIR)/XmlNode.cpp \
$(ABS_DIR)/XmlDoc.cpp \
$(ABS_DIR)/XslNode.cpp \
$(ABS_DIR)/XslDoc.cpp \
$(ABS_DIR)/XSchemaNode.cpp \
$(ABS_DIR)/XSchemaDoc.cpp \
$(ABS_DIR)/XmlAdminQueryEnvironment.cpp
